    - Fixed: zypper did not report any updates (reported by Ivan De Masi).
    - Use 'zypper refresh' for refreshing package repositories.
  * Add RELEASE header to version string on RPM queries.
  * Update apt-dater.conf man page.
  * Fix two hardening compile warnings (provided by Patrick Matthäi).
  * Include locale.h if available.
    (Closes Debian Bug#642696 by Mònica Ramírez Arceda)

 -- Thomas Liske <liske@ibh.de>  

apt-dater (0.8.5) unstable; urgency=low

  * Fixed a key mismatch in the history view.
  * Fixed a selector positioning bug.
  * Don't use sudo on apt-dater-host status w/ aptitude.
    (Fixes Debian Bug#596723 by "chrysn")
  * Configure should check if popt.h is available.
    (Closes SF Bug#3045502 by Henri Salo)
  * Drop "[screen] enabled" config option, it doesn't work any more.
    (Reported by Daniel Baumann due Debian Bug#597941)
  * Fix unknown yum based hosts (reported on Fedora) due bad package status
    interpretation.
    (Reported by Patrick Matthäi)
  * Some pedantic stuff (use long options for aptitude and apt-get to
    ease code reading). Don't fail on untrusted/unauthenticated packages
    when checking for upgrades (still check for the upgrade itself).
    (Contributed by Mathieu PARENT due SF Bug#3158198)
  * Check for updates (refresh) using dist-upgrade. This show
    ABI-incompatible upgrades (like the recent bind9 one:
    http://www.debian.org/security/2010/dsa-2130.en.html).
    (Contributed by Mathieu PARENT due SF Bug#3158198)
  * Make upgrade method customizable.
    (Inspired by Mathieu PARENT due SF Bug#3158198)
  * Fixed a key mismatch in the history view.
  * Fixed a selector positioning bug.
  * Allow apt-dater-host to be used with ssh keys.
    (Inspired by 'Chromosom' due SF Bug#2862139)

 -- Andre Ellguth <ellguth@ibh.de>  Tue, 01 Feb 2011 09:04:25 +0100

apt-dater (0.8.4) unstable; urgency=low

  * Add UUID host field to report output.