@@ -1,6 +1,6 @@
 # front-end for dpkg to use
 # Supported: apt-get, aptitude
-$DPKGTOOL="aptitude";
+$DPKGTOOL="apt-get";
 
 # Method to do upgrades, possible values (depends on $DPKGTOOL):
 #  upgrade		(apt-get, aptitude on Etch)
