@@ -1,0 +1,15 @@
+.TH "APT-DATER-HOST" "1"
+.SH "NAME"
+apt\-dater\-host \- host helper application for apt\-dater.
+.SH "SYNOPSIS"
+\fBapt\-dater\-host\fR
+.SH "DESCRIPTION"
+This manual page documents briefly the \fBapt\-dater\-host\fR helper.
+\fBapt\-dater\-host\fR is the host helper application for apt\-dater for
+watching and updating the targeted application about apt\-dater.
+.SH "AUTHOR"
+This manual page was written by Patrick Matth\[:a]i <pmatthaei@debian.org>
+for apt\-dater\-host.
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU General Public License, Version 2 any
+later version published by the Free Software Foundation.
